@@ -4,3 +4,7 @@
 .. automodule:: webhelpers.html.render
 
 .. currentmodule:: webhelpers.html.render
+
+.. autofunction:: render
+
+.. autofunction:: sanitize
